<resources>
    <string name="app_name">My notepad</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button name</string>
    <string name="start">Start</string>
    <string name="center">Center</string>
    <string name="middle">Middle</string>
    <string name="sizeTile">SizeTile</string>
    <string name="sizeSquare">SizeSquare</string>
    <string name="sizeGap">SizeGap</string>
    <string name="mondayShort">Пн</string>
    <string name="tuesdayShort">Вт</string>
    <string name="wednShort">Ср</string>
    <string name="thursdayShort">Чт</string>
    <string name="fridayShort">Пт</string>
    <string name="saturdayShort">Сб</string>
    <string name="sundayShort">Вс</string>
    <string name="title_activity_main2">MainActivity2</string>

</resources>